; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/lz4/lib/extr_lz4.c_LZ4_decompress_safe_withSmallPrefix.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/lz4/lib/extr_lz4.c_LZ4_decompress_safe_withSmallPrefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@endOnInputSize = common dso_local global i32 0, align 4
@decode_full_block = common dso_local global i32 0, align 4
@noDict = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i32, i64)* @LZ4_decompress_safe_withSmallPrefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LZ4_decompress_safe_withSmallPrefix(i8* %0, i8* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* @endOnInputSize, align 4
  %16 = load i32, i32* @decode_full_block, align 4
  %17 = load i32, i32* @noDict, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = bitcast i8* %18 to i32*
  %20 = load i64, i64* %10, align 8
  %21 = sub i64 0, %20
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = call i32 @LZ4_decompress_generic(i8* %11, i8* %12, i32 %13, i32 %14, i32 %15, i32 %16, i32 %17, i32* %22, i32* null, i32 0)
  ret i32 %23
}

declare dso_local i32 @LZ4_decompress_generic(i8*, i8*, i32, i32, i32, i32, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
